--- a/gallery.html
+++ b/gallery.html
@@ -489,7 +489,7 @@ document.getElementById("main").style.marginLeft= "0";
 
 	
 	 <!-- footer -->
-     <footer class="site-footer" style="margin-top: 10px;"  data-aos="zoom-in" style="margin-top: 50px">  
+	<footer class="site-footer" style="margin-top: 10px;"  data-aos="zoom-in" style="margin-top: 50px">  
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-sm-12 col-md-2 ">
@@ -529,12 +529,16 @@ document.getElementById("main").style.marginLeft= "0";
 						</li>
 				</div>
 				<div class="col-xs-6 col-md-2">
-					<h6>Developed by</h6>
-					<div class="row">
-
+					<h6 class="justify-content-center d-flex">Developed by</h6>
+					<div class="row justify-content-center d-flex">
+						<ul class="justify-content-center" style="margin-top: 5px;color: rgb(215, 218, 218);">
+							<li>SASI KARTHIK BEZAWADA</li>
+							<li>MD SALMAN SHAIK</li>
+						</ul>
 					</div>
-					<div class="row">
-						<img src="images/telstalogo.jpg" alt="telsta logo" style="max-width: 100%;height: 50px;margin-left: 20px;">
+					<div class="row justify-content-center d-flex">
+						<img src="images/telstalogo.jpg" alt="telsta logo" style="max-width: 100%;height:45px;">
+					</div>
 					</div>
 				</div>
 			</div>
@@ -546,12 +550,79 @@ document.getElementById("main").style.marginLeft= "0";
 					<p class="copyright-text">Copyright &copy;All Rights Reserved by 
 		 			 	<a href="index.html">Wearhug</a>.
 			 		</p>
+					
+				</div>
+		  	</div>
+		</div>
+  </footer>
+  <!--footer ends --> <!-- footer -->
+	<footer class="site-footer" style="margin-top: 10px;"  data-aos="zoom-in" style="margin-top: 50px">  
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-sm-12 col-md-2 ">
+					<img class="footerimg" src="images/logo1.png"  alt="logo" >
+				</div>
+				<div class="col-sm-12 col-md-4">
+					<h6>About</h6>
+					<p class="text-justify">Abouut section</p>
+				</div>
+	
+				<div class="col-xs-6 col-md-2">
+					<h6>Categories</h6>
+					<ul class="footer-links">
+						<li><a href="Indoor Birthday Decorations.html">Indoor Birthday Decorations</a></li>
+						<li><a href="BanquetHall.html">Banquet Hall Decorations</a></li>
+						<li><a href="Traditional Backdrops.html">Traditional Backdrops</a></li>
+						<li><a href="Rentals.html">Rentals</a></li>
+					</ul>
+				</div>
+	
+				<div class="col-xs-6 col-md-2">
+					<h6>Our Address</h6>
+						<ul class="footer-links">
+						<li>
+							<i class="fa-solid fa-map-location-dot fa-sm"></i>
+							<a href="" title="click for directions">:Shop 1, Plot No. 159/A,<br> Srinivas Towers
+						Addagutta, <br>Western Hills, Kukatpally,<br>
+						Hyderabad, Telangana 500072
+						</a></li>
+						<li>
+							<i class="fa-solid fa-phone fa-sm" ></i>
+							:<a href="tel:+91 9866477505">+91 9866477505 </a>
+						</li>	
+						<li>
+							<i class="fa-regular fa-envelope fa-sm"></i>
+							:<a href="mailto:bsasikarthik191@gmail.com" target="_blank" >wearhug@gmail.com</a>
+						</li>
+				</div>
+				<div class="col-xs-6 col-md-2">
+					<h6 class="justify-content-center d-flex">Developed by</h6>
+					<div class="row justify-content-center d-flex">
+						<ul class="justify-content-center" style="margin-top: 5px;color: rgb(215, 218, 218);">
+							<li>SASI KARTHIK BEZAWADA</li>
+							<li>MD SALMAN SHAIK</li>
+						</ul>
+					</div>
+					<div class="row justify-content-center d-flex">
+						<img src="images/telstalogo.jpg" alt="telsta logo" style="max-width: 100%;height:45px;">
+					</div>
+					</div>
+				</div>
+			</div>
+		  <hr>
+		</div>
+		<div class="container-fluid">
+		  	<div class="row d-flex justify-content-center">
+				<div class="col-md-8 col-sm-6 col-xs-12">
+					<p class="copyright-text">Copyright &copy;All Rights Reserved by 
+		 			 	<a href="index.html">Wearhug</a>.
+			 		</p>
+					
 				</div>
 		  	</div>
 		</div>
   </footer>
   <!--footer ends -->
-
 
 
 
